--- a/src/UI-Kit/Button/Button.module.scss
+++ b/src/UI-Kit/Button/Button.module.scss
@@ -3,7 +3,6 @@
 .Button {
   display: inline-block;
   padding: 1rem 1.5rem;
-  background: $brand-primary;
 
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -14,8 +13,17 @@
   }
 
   transition: all 0.2s linear;
+}
 
-  &:hover {
-    background: darken($brand-primary, 15%);
+@mixin Button($theme) {
+  .Button-#{$theme} {
+    background: color($theme, primary);
+
+    &:hover {
+      background: color($theme, primary-focus);
+    }
   }
 }
+
+@include Button(Light);
+@include Button(Dark);
