--- a/src/components/EmailListForm/EmailListForm.module.scss
+++ b/src/components/EmailListForm/EmailListForm.module.scss
@@ -1,17 +1,12 @@
-@import '../../styles/_variables.scss';
-@import '../../styles/_mixins.scss';
+@import 'foundation';
 
 .EmailListForm {
-  background: #f5f5f5;
-  color: $text-color-primary;
-
   .SubscribeCallout {
     display: flex;
     flex-direction: column;
   }
 
   .DataEntry {
-    background: #e1e1e1;
     position: relative;
 
     $signup-complete-animation-speed: 0.7s;
@@ -49,18 +44,12 @@
   }
 
   input {
-    color: $text-color-primary;
     width: 100%;
-    border: 1px solid white;
+    border: 1px solid;
     transition: all 0.1s linear;
 
     &:focus {
       outline: none;
-      border-color: $text-color-primary;
-    }
-
-    &.Error {
-      color: red;
     }
   }
 
@@ -74,20 +63,15 @@
 
     border: none;
     background-image: none;
-    background-color: $brand-primary;
-    color: white;
 
     letter-spacing: 1px;
     transition: all 0.1s linear;
 
     &:hover {
       cursor: pointer;
-      background-color: darken($brand-primary, 15%);
     }
 
     &:disabled {
-      background-color: $text-color-secondary;
-
       &:hover {
         cursor: not-allowed;
       }
@@ -124,3 +108,41 @@
     z-index: 1;
   }
 }
+
+@mixin EmailListForm($theme) {
+  .EmailListForm-#{$theme} {
+    background: color($theme, caption-bg);
+    color: color($theme, text);
+
+    input {
+      background: color($theme, body-bg);
+      color: color($theme, text);
+      border-color: color($theme, text-muted);
+
+      &:focus {
+        border-color: color($theme, text);
+      }
+
+      &.Error {
+        color: color($theme, primary-text);
+        border-color: color($theme, primary-text);
+      }
+    }
+
+    button {
+      background-color: color($theme, primary);
+      color: white;
+
+      &:hover {
+        background-color: color($theme, primary-focus);
+      }
+
+      &:disabled {
+        background-color: color($theme, text-muted);
+      }
+    }
+  }
+}
+
+@include EmailListForm(Light);
+@include EmailListForm(Dark);
