--- a/src/pages/homepage.module.scss
+++ b/src/pages/homepage.module.scss
@@ -16,10 +16,21 @@
     font-weight: normal;
     font-size: 1.675rem;
     letter-spacing: 0px;
-    color: $text-color-secondary;
 
     @include mobile-only {
       font-size: 1.5rem;
     }
   }
 }
+
+@mixin MainHeader($theme) {
+  .MainHeader-#{$theme} {
+    span,
+    p {
+      color: color($theme, text-muted);
+    }
+  }
+}
+
+@include MainHeader(Light);
+@include MainHeader(Dark);
