--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,68 @@
+@function color($theme, $name) {
+  @if (
+    $theme !=
+      'light' and
+      $theme !=
+      'dark' and
+      $theme !=
+      'Light' and
+      $theme !=
+      'Dark'
+  ) {
+    @error 'You must pass in either light or dark as the theme';
+  }
+
+  $colors: (
+    primary: (
+      Light: #ec4242,
+      Dark: #fa5a5a,
+    ),
+    primary-focus: (
+      Light: #db1616,
+      Dark: #f81f1f,
+    ),
+    primary-text: (
+      Light: #dd0404,
+      Dark: #f95b5b,
+    ),
+    primary-text-focus: (
+      Light: #a10303,
+      Dark: #f72020,
+    ),
+    text: (
+      Light: #444,
+      Dark: #ddd,
+    ),
+    text-bold: (
+      Light: #222,
+      Dark: #eee,
+    ),
+    text-muted: (
+      Light: #767676,
+      Dark: #b5b5b5,
+    ),
+    caption-bg: (
+      Light: #f0f0f0,
+      Dark: #111111,
+    ),
+    body-bg: (
+      Light: #fff,
+      Dark: #2a2a2a,
+    ),
+    img-border: (
+      Light: #111111,
+      Dark: #f0f0f0,
+    ),
+    accent-line: (
+      Light: #dddddd,
+      Dark: #3f3f3f,
+    ),
+  );
+
+  $selected-color-map: map-get($colors, $name);
+  @return map-get($selected-color-map, $theme);
+}
+
 $default-sans-serif-stack: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
   Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
   'Segoe UI Symbol';
