--- a/src/templates/post/blog/components/PostBody/PostBody.scss
+++ b/src/templates/post/blog/components/PostBody/PostBody.scss
@@ -3,16 +3,9 @@
 
 .post-body {
   a {
-    color: $brand-primary;
     text-decoration: none;
     border-bottom: 1px solid transparent;
-
-    &:hover {
-      border-color: $brand-primary;
-    }
   }
-
-  color: $text-color-primary;
 
   h1 {
     @extend .Header;
@@ -49,7 +42,6 @@
 
   img {
     max-width: 100%;
-    background: #fff;
     margin: 1rem 0;
 
     @include mobile-only {
@@ -68,9 +60,7 @@
   }
 
   blockquote {
-    @include left-border();
     margin-left: 0;
-    color: $text-color-secondary;
     font-size: 1.25rem;
     line-height: 1.5;
   }
@@ -103,8 +93,59 @@
         font-size: 0.8rem;
         text-transform: uppercase;
         letter-spacing: 1px;
-        color: lighten($text-color-secondary, 30%);
       }
     }
   }
 }
+
+@mixin PostBody($theme) {
+  .post-body.#{$theme} {
+    a {
+      color: color($theme, primary-text);
+
+      &:hover {
+        border-color: color($theme, primary-text);
+      }
+    }
+
+    color: color($theme, text);
+
+    h1 {
+      @extend .Header;
+      @extend .Headline;
+      color: color($theme, text-bold);
+    }
+
+    h2 {
+      @extend .Header;
+      @extend .Title;
+      color: color($theme, text-bold);
+    }
+
+    h3 {
+      @extend .Header;
+      @extend .Subtitle;
+      color: color($theme, text-bold);
+    }
+
+    img {
+      background-color: color($theme, caption-bg);
+    }
+
+    blockquote {
+      @include left-border(color($theme, primary));
+      color: color($theme, text-muted);
+    }
+
+    .scrollable {
+      @include mobile-only {
+        &:after {
+          color: color($theme, text-muted);
+        }
+      }
+    }
+  }
+}
+
+@include PostBody(Light);
+@include PostBody(Dark);
