--- a/src/templates/post/blog/components/PostHeader/PostHeader.module.scss
+++ b/src/templates/post/blog/components/PostHeader/PostHeader.module.scss
@@ -2,58 +2,18 @@
 @import '../UI-Kit/Header/Header.module.scss';
 
 .PostHeader {
-  .Link {
-    @extend .Headline; // important because it sets the correct font-size
-    display: inline-block;
-    margin-top: 1em;
-
-    .Wrapper {
-      display: flex;
-      align-items: center;
-
-      .LinkHeader {
-        margin-top: 0;
-        transition: all 0.1s ease-in-out;
-      }
-
-      .Icon {
-        line-height: 0;
-
-        svg {
-          transition: all 0.1s ease-in-out;
-          width: 0.85em;
-          height: 0.85em;
-          max-height: none;
-          max-width: none;
-          padding: 0.25em;
-
-          background: $text-color-primary;
-
-          path {
-            fill: white;
-          }
-        }
-      }
-    }
-
-    &:hover {
-      border-bottom-color: transparent;
-
-      .Wrapper .LinkHeader {
-        color: $brand-primary;
-      }
-
-      .Icon svg {
-        transform: rotate(45deg);
-      }
-    }
-  }
-
   .Attribution {
     text-align: center;
     font-size: 0.9rem;
     padding-top: 0.5rem;
-
-    color: $text-color-secondary;
   }
 }
+
+@mixin PostHeader($theme) {
+  .PostHeader-#{$theme} .Attribution {
+    color: color($theme, text-muted);
+  }
+}
+
+@include PostHeader(Light);
+@include PostHeader(Dark);
