--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,9 @@
+$font-stack: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+  Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+  'Segoe UI Symbol';
+
+$base-font-size: 15px;
+
 @function color($theme, $name) {
   @if (
     $theme !=
@@ -62,6 +68,51 @@
   $selected-color-map: map-get($colors, $name);
   @return map-get($selected-color-map, $theme);
 }
+
+@function space($size) {
+  @if (
+    $size !=
+      'tiny' and
+      $size !=
+      'little' and
+      $size !=
+      'small' and
+      $size !=
+      'normal' and
+      $size !=
+      'medium' and
+      $size !=
+      'big' and
+      $size !=
+      'large' and
+      $size !=
+      'huge'
+  ) {
+    @error 'You must pass in a valid space value.';
+  }
+
+  $base: $base-font-size;
+
+  $space: (
+    tiny: $base * 1/3,
+    little: $base * 2/3,
+    small: $base,
+    normal: $base * 4/3,
+    medium: $base * 2,
+    big: $base * 8/3,
+    large: $base * 4,
+    huge: $base * 6,
+  );
+
+  @return map-get($space, $size);
+}
+
+$input-height: space(small) * 3;
+
+// LEGACY START ===========================================================================
+// LEGACY START ===========================================================================
+// LEGACY START ===========================================================================
+// LEGACY START ===========================================================================
 
 $default-sans-serif-stack: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
   Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
