--- a/src/new-UI-Kit/Button/Button.module.scss
+++ b/src/new-UI-Kit/Button/Button.module.scss
@@ -1,4 +1,4 @@
 @import './Button.mixins.scss';
 
-@include Button(Light);
-@include Button(Dark);
+@include ButtonStyle(Button, Light);
+@include ButtonStyle(Button, Dark);
