--- a/src/new-UI-Kit/Input/Input.mixins.scss
+++ b/src/new-UI-Kit/Input/Input.mixins.scss
@@ -24,6 +24,10 @@
   &.FullWidth {
     width: 100%;
   }
+
+  &.Invalid {
+    color: color($theme, primary-text);
+  }
 }
 
 @mixin Label($theme) {
