--- a/src/new-UI-Kit/Input/Input.module.scss
+++ b/src/new-UI-Kit/Input/Input.module.scss
@@ -1,5 +1,10 @@
 @import './Input.mixins.scss';
 
+.Container {
+  display: flex;
+  flex-direction: column;
+}
+
 @include Input-Theme(Light);
 @include Input-Theme(Dark);
 
