--- a/src/new-UI-Kit/LinkList/LinkList.module.scss
+++ b/src/new-UI-Kit/LinkList/LinkList.module.scss
@@ -2,7 +2,7 @@
 
 .LinkList {
   width: 100%;
-  max-width: 500px; // TODO: remove this
+  max-width: 500px; // TODO: remove this when layout utilities exist
 }
 
 .Pair {
