--- a/src/styles/_ui-kit-mixins.scss
+++ b/src/styles/_ui-kit-mixins.scss
@@ -3,3 +3,4 @@
 @import '../new-UI-Kit/Header/Header.mixins.scss';
 @import '../new-UI-Kit/Link/Link.mixins.scss';
 @import '../new-UI-Kit/Blockquote/Blockquote.mixins.scss';
+@import '../new-UI-Kit/Button/Button.mixins.scss';
