--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -109,6 +109,12 @@ $base-font-size: 15px;
 
 $input-height: space(small) * 3;
 
+@mixin on-small-screens {
+  @media screen and (max-width: 500px) {
+    @content;
+  }
+}
+
 // LEGACY START ===========================================================================
 // LEGACY START ===========================================================================
 // LEGACY START ===========================================================================
