--- a/src/styles/ui-kit-mixins.scss
+++ b/src/styles/ui-kit-mixins.scss
@@ -1,7 +1,7 @@
 @import 'foundation';
-@import '../new-UI-Kit/TextStyle/TextStyle.mixins.scss';
-@import '../new-UI-Kit/Header/Header.mixins.scss';
-@import '../new-UI-Kit/Link/Link.mixins.scss';
-@import '../new-UI-Kit/Blockquote/Blockquote.mixins.scss';
-@import '../new-UI-Kit/Breakout/Breakout.mixins.scss';
-@import '../new-UI-Kit/Button/Button.mixins.scss';
+@import '../UI-Kit/TextStyle/TextStyle.mixins.scss';
+@import '../UI-Kit/Header/Header.mixins.scss';
+@import '../UI-Kit/Link/Link.mixins.scss';
+@import '../UI-Kit/Blockquote/Blockquote.mixins.scss';
+@import '../UI-Kit/Breakout/Breakout.mixins.scss';
+@import '../UI-Kit/Button/Button.mixins.scss';
