--- a/src/styles/ui-kit-mixins.scss
+++ b/src/styles/ui-kit-mixins.scss
@@ -1,6 +1,7 @@
 @import 'foundation';
 @import '../UI-Kit/TextStyle/TextStyle.mixins.scss';
 @import '../UI-Kit/Header/Header.mixins.scss';
+@import '../UI-Kit/Icon/Icon.mixins.scss';
 @import '../UI-Kit/Link/Link.mixins.scss';
 @import '../UI-Kit/Blockquote/Blockquote.mixins.scss';
 @import '../UI-Kit/Breakout/Breakout.mixins.scss';
