--- a/src/UI-Kit/FeaturedItem/FeaturedItem.module.scss
+++ b/src/UI-Kit/FeaturedItem/FeaturedItem.module.scss
@@ -1,9 +1,24 @@
 @import 'foundation';
+@import '../Icon/Icon.mixins.scss';
+
+.FeaturedItem {
+  position: relative;
+}
+
+.Icon {
+  position: absolute;
+  bottom: space(big);
+  right: space(big);
+}
 
 @mixin FeaturedItem($theme) {
   .FeaturedItem-#{$theme} {
     background-color: color($theme, caption-bg);
     padding: space(big);
+
+    .Icon {
+      @include IconColor($theme, primary);
+    }
   }
 }
 
