--- a/src/components/Form/components/FormFooter/FormFooter.module.scss
+++ b/src/components/Form/components/FormFooter/FormFooter.module.scss
@@ -13,7 +13,7 @@
     width: 100%;
 
     li {
-      margin-left: space(little);
+      margin-left: space(medium);
 
       &:first-child {
         margin-left: 0;
