--- a/src/UI-Kit/FeaturedPostItem/FeaturedPostItem.module.scss
+++ b/src/UI-Kit/FeaturedPostItem/FeaturedPostItem.module.scss
@@ -1,7 +1,7 @@
 @import 'foundation';
 @import '../Icon/Icon.mixins.scss';
 
-.FeaturedItem {
+.FeaturedPostItem {
   position: relative;
 }
 
@@ -11,8 +11,8 @@
   right: space(big);
 }
 
-@mixin FeaturedItem($theme) {
-  .FeaturedItem-#{$theme} {
+@mixin FeaturedPostItem($theme) {
+  .FeaturedPostItem-#{$theme} {
     background-color: color($theme, caption-bg);
     padding: space(big);
 
@@ -22,5 +22,5 @@
   }
 }
 
-@include FeaturedItem(Light);
-@include FeaturedItem(Dark);
+@include FeaturedPostItem(Light);
+@include FeaturedPostItem(Dark);
