--- a/src/UI-Kit/Input/Input.mixins.scss
+++ b/src/UI-Kit/Input/Input.mixins.scss
@@ -4,6 +4,7 @@
   appearance: none;
 
   border: 1px solid color($theme, text-muted);
+  border-radius: 0;
   color: color($theme, text);
   background: color($theme, body-bg);
 
