--- a/src/UI-Kit/Navbar/Navbar.module.scss
+++ b/src/UI-Kit/Navbar/Navbar.module.scss
@@ -22,6 +22,10 @@
     &:first-child {
       margin-left: 0;
     }
+
+    @include on-small-screens {
+      margin-left: space(little);
+    }
   }
 }
 
