--- a/src/UI-Kit/Breakout/Breakout.mixins.scss
+++ b/src/UI-Kit/Breakout/Breakout.mixins.scss
@@ -1,11 +1,22 @@
 @import 'foundation';
 
+@mixin smaller-than-breakout-width {
+  @media screen and (max-width: $container-size + ($breakout-amount * 2)) {
+    @content;
+  }
+}
+
 @mixin Breakout() {
   margin-left: -$breakout-amount;
   margin-right: -$breakout-amount;
 
+  @include smaller-than-breakout-width {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
   @include on-small-screens {
-    margin-left: -$base-font-size;
-    margin-right: -$base-font-size;
+    margin-left: -$container-base-padding;
+    margin-right: -$container-base-padding;
   }
 }
