--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,10 @@ html {
   font-family: $font-stack;
   font-size: $base-font-size;
   line-height: 1.666667;
+
+  @include on-small-screens {
+    font-size: 16px;
+  }
 }
 
 hr {
