Plugin Fixes, Fonts, Bug Fixes

--- a/src/UI-Kit/Header/Header.mixins.scss
+++ b/src/UI-Kit/Header/Header.mixins.scss
@@ -11,6 +11,7 @@
     background: color($theme, primary);
     padding-top: $y-padding;
     padding-bottom: $y-padding;
+    box-decoration-break: clone; // Fixes a firefox-specfic bug
   }
 }
 
