--- a/src/styles/foundation.scss
+++ b/src/styles/foundation.scss
@@ -1,102 +1,16 @@
-@function color($theme, $name) {
-  @if ($theme != 'Light' and $theme != 'Dark') {
-    @error 'You must pass in either light or dark as the theme';
-  }
+@import 'functions-and-mixins';
 
-  $colors: (
-    primary: (
-      Light: #ec4242,
-      Dark: #fa5a5a,
-    ),
-    primary-focus: (
-      Light: #db1616,
-      Dark: #f81f1f,
-    ),
-    primary-text: (
-      Light: #dd0404,
-      Dark: #f95b5b,
-    ),
-    primary-text-focus: (
-      Light: #a10303,
-      Dark: #f72020,
-    ),
-    text: (
-      Light: #444,
-      Dark: #ddd,
-    ),
-    text-bold: (
-      Light: #222,
-      Dark: #eee,
-    ),
-    text-muted: (
-      Light: #767676,
-      Dark: #b5b5b5,
-    ),
-    caption-bg: (
-      Light: #f0f0f0,
-      Dark: #111111,
-    ),
-    body-bg: (
-      Light: #fff,
-      Dark: #2a2a2a,
-    ),
-    img-border: (
-      Light: #111111,
-      Dark: #f0f0f0,
-    ),
-    accent-line: (
-      Light: #dddddd,
-      Dark: #3f3f3f,
-    ),
-  );
+$base-font-stack: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica,
+  Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 
-  $selected-color-map: map-get($colors, $name);
-  @return map-get($selected-color-map, $theme);
-}
+$static-font-face: 'Inter Static';
+$variable-font-face: 'Inter Variable';
 
-@function space($size) {
-  @if (
-    $size !=
-      'tiny' and
-      $size !=
-      'little' and
-      $size !=
-      'small' and
-      $size !=
-      'normal' and
-      $size !=
-      'medium' and
-      $size !=
-      'big' and
-      $size !=
-      'large' and
-      $size !=
-      'huge'
-  ) {
-    @error 'You must pass in a valid space value.';
-  }
-
-  $base: 1rem;
-
-  $space: (
-    tiny: $base * 1/3,
-    little: $base * 2/3,
-    small: $base,
-    normal: $base * 4/3,
-    medium: $base * 2,
-    big: $base * 8/3,
-    large: $base * 4,
-    huge: $base * 6,
-  );
-
-  @return map-get($space, $size);
-}
-
-$font-stack: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-  Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-  'Segoe UI Symbol';
+$variable-font-stack: $variable-font-face, $base-font-stack;
+$static-font-stack: $static-font-face, $base-font-stack;
 
 $base-font-size: 15px;
+$small-screens-font-size: 16px;
 $container-size: 560px;
 $container-base-padding: $base-font-size + 10px;
 $breakout-amount: $base-font-size * 8/3;
