Styling for CodeEditor

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,6 +10,8 @@
   @import '~@fontsource/inter/variable-full.css';
 }
 
+@import '~@fontsource/fira-mono/400.css';
+
 html {
   @screen base {
     font-size: 16px;
