--- a/src/styles/syntaxHighlighting.scss
+++ b/src/styles/syntaxHighlighting.scss
@@ -5,15 +5,17 @@
 
 code[class*='language-'],
 pre[class*='language-'] {
-  font-family: 'PT Mono', 'Consolas', 'Bitstream Vera Sans Mono', 'Courier New',
-    Courier, monospace;
+  @apply font-mono;
+
   direction: ltr;
   text-align: left;
   word-spacing: normal;
   word-break: normal;
   font-size: 0.95em;
   line-height: 1.2em;
-  border-radius: 3px;
+
+  @apply rounded-md;
+  @apply overflow-hidden;
 
   tab-size: 4;
   hyphens: none;
