--- a/src/content/blog/connecting-antlr-to-codemirror-6-an-introduction/CodeEditor/CodeEditor.scss
+++ b/src/content/blog/connecting-antlr-to-codemirror-6-an-introduction/CodeEditor/CodeEditor.scss
@@ -3,7 +3,64 @@
 @tailwind utilities;
 
 .CodeEditor {
+  @apply border border-[#ddd] dark:border-[#555];
+  @apply rounded-md;
+  @apply overflow-hidden;
+  @apply font-mono;
+  font-size: 0.95em;
+
+  .cm-cursor {
+    @apply border-l-text-bold dark:border-l-text-bold-dark;
+  }
+
   .cm-editor {
     @apply bg-caption-bg dark:bg-caption-bg-dark;
+    @apply font-mono;
+  }
+
+  .cm-focused .cm-selectionBackground,
+  .cm-selectionBackground,
+  ::selection {
+    @apply bg-red-100 dark:bg-red-900;
+  }
+
+  .cm-scroller {
+    @apply font-mono;
+  }
+
+  .cm-gutters {
+    @apply bg-caption-bg dark:bg-caption-bg-dark;
+    @apply border-[#ddd] dark:border-[#555];
+
+    @apply border-none;
+  }
+
+  .cm-lineNumbers .cm-gutterElement {
+    @apply text-text-muted dark:text-text-muted-dark;
+    @apply text-[#ccc] dark:text-[#555];
+    @apply pr-[10px];
+  }
+
+  .cm-activeLineGutter.cm-gutterElement {
+    @apply text-text-muted dark:text-text-muted-dark;
+  }
+
+  .cm-content {
+  }
+
+  .cm-gutter {
+    @apply bg-caption-bg dark:bg-caption-bg-dark;
+    @apply w-[38px];
+  }
+
+  .cm-line {
+    @apply pl-[5px];
+  }
+
+  .cm-activeLineGutter,
+  .cm-activeLine {
+    @apply bg-[#e2e2e2] dark:bg-[#2f2f2f];
+
+    @apply caret-red-500;
   }
 }
